<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about">About</string>
    <string name="about_app">About App</string>
    <string name="about_ptz">Gimbal Info</string>
    <string name="activate_fail">Activation failed</string>
    <string name="activate_fail_code">Activation failed. Try again. (Error Code:</string>
    <string name="activate_start">Start to activate</string>
    <string name="activate_success">Activation Succeeded.</string>
    <string name="activate_tip">Activation</string>
    <string name="activate_tip_1">1. Device can be used until activation.</string>
    <string name="activate_tip_2">2. This activation requires available network.</string>
    <string name="activate_user_privacy_agreement">FV Share User Privacy Agreement</string>
    <string name="activating">Activating</string>
    <string name="ad_skip">Skip</string>
    <string name="advanced_setting_for_info">Info</string>
    <string name="advanced_setting_for_rocker">Joystick</string>
    <string name="advanced_settingo">Advanced Settings</string>
    <string name="all_follow">Follow</string>
    <string name="all_the_follow_mode">Follow</string>
    <string name="app_dwonload_cancel">Cancel Update</string>
    <string name="app_dwonload_failed">Download Failed</string>
    <string name="app_dwonload_success">Download Succeeded</string>
    <string name="app_has_new_version">New updates</string>
    <string name="app_name">FVShare</string>
    <string name="app_no_release_points">No update</string>
    <string name="app_upgrading">Updating. Please wait</string>
    <string name="app_version">Version :</string>
    <string name="auto_connect">Auto Connecting</string>
    <string name="back">Back</string>
    <string name="basic_operation">Gimbal Basic Control</string>
    <string name="basic_operation_url">https://www.youtube.com/watch?v=P_EZjpMvtlg</string>
    <string name="battery_too_low">Device battery is less than 15% and can’t be upgraded.</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="calibration">Calibration</string>
    <string name="camera_is_following_to_high_speed_video_resolution">HFR recording is not available on IntelliTrace</string>
    <string name="camera_prevent_jitter_switch_button_no_support">Anti-Shaking is not available on this phone</string>
    <string name="choice">Select</string>
    <string name="clean_catch">Clear cache</string>
    <string name="company_name">Freevision Intelligent Technology Co. Ltd.</string>
    <string name="connect_ptz_please">Please connect to gimbal.</string>
    <string name="connect_the_application">FV Share Bluetooth Connection</string>
    <string name="connect_the_application_url">https://www.youtube.com/watch?v=jDLNYI-xRoc</string>
    <string name="contextual_model">Scene Mode Setting</string>
    <string name="control_default_camera_cancel">Cancel</string>
    <string name="control_default_camera_function">Control system camera</string>
    <string name="control_default_camera_function_desc">This function can control the camera to take photos and videos.</string>
    <string name="control_default_camera_setting">Go to setting</string>
    <string name="control_default_camera_tip_1">①.Connect with VILTA bluetooth in phone setting.</string>
    <string name="control_default_camera_tip_2">②.Single tap the shutter button of gimbal to take photos or videos with the camera.</string>
    <string name="cradle_head_installation">Mount Your Phone</string>
    <string name="cradle_head_installation_url">https://www.youtube.com/watch?v=ZFs-ynme9PA</string>
    <string name="custom_for_speed">Custom</string>
    <string name="custom_for_speed2">Custom Mode</string>
    <string name="dead_band">Dead zone</string>
    <string name="device_communication_error">Abnormal Device Connection.</string>
    <string name="direction_of_adjustment">Device is not balanced. Turn off or sleep the device and adjust it as shown.</string>
    <string name="enter_camera">Camera</string>
    <string name="exposure_sensitivity_adjust">Exposure</string>
    <string name="fast_speed">Fast</string>
    <string name="file_all_select">All</string>
    <string name="file_creation">Edit</string>
    <string name="file_edit_a_filter">Filters</string>
    <string name="file_edit_adjust_the">Adjust</string>
    <string name="file_edit_black_and_white">black and white</string>
    <string name="file_edit_contrast">Contrast</string>
    <string name="file_edit_cropping_rotation">CutRotate</string>
    <string name="file_edit_freshness">Sweet</string>
    <string name="file_edit_intensity_adjusting">Degree :</string>
    <string name="file_edit_like_beauty">Beauty</string>
    <string name="file_edit_lomo">LOMO</string>
    <string name="file_edit_mosaic">Mosaic</string>
    <string name="file_edit_mosaic_text_two">second time use of mosaic is not supported</string>
    <string name="file_edit_paint">Paint</string>
    <string name="file_edit_photo_no">This photo can’t support this operation</string>
    <string name="file_edit_relievo">Silhouette</string>
    <string name="file_edit_saturation">Saturation</string>
    <string name="file_edit_sketch">Sketch</string>
    <string name="file_edit_the_original_image">Full size</string>
    <string name="file_edit_the_original_image2">Full image</string>
    <string name="file_edit_video_no">This video can’t support this operation</string>
    <string name="file_edit_visibility">Brightness</string>
    <string name="file_edit_yellowing">Twilight</string>
    <string name="file_go_select">start to Edit</string>
    <string name="file_home_act_back">Tap Back to exit App</string>
    <string name="file_look_photo_info">Info</string>
    <string name="file_look_photo_info_date">Date</string>
    <string name="file_look_photo_info_path">Path</string>
    <string name="file_look_photo_info_size">Size</string>
    <string name="file_month_april">April</string>
    <string name="file_month_august">August</string>
    <string name="file_month_december">December</string>
    <string name="file_month_february">February</string>
    <string name="file_month_january">January</string>
    <string name="file_month_july">July</string>
    <string name="file_month_june">June</string>
    <string name="file_month_march">March</string>
    <string name="file_month_may">May</string>
    <string name="file_month_november">November</string>
    <string name="file_month_october">October</string>
    <string name="file_month_september">September</string>
    <string name="file_photo_video_delete">Delete</string>
    <string name="file_photo_video_delete_yes_or_no">Are you sure to delete</string>
    <string name="file_photo_video_delete_yes_or_no_one">Delete or not?</string>
    <string name="file_picture_generation_being">Processing</string>
    <string name="file_select_creation">Select editing File</string>
    <string name="file_select_video">Choose Video</string>
    <string name="file_show_pro_title">Loading...</string>
    <string name="file_the_first_step">First step already</string>
    <string name="file_the_last_step">Last step already</string>
    <string name="file_the_raw">Full video</string>
    <string name="file_video_have_been_saved">Saved</string>
    <string name="file_video_play_end">Last video already</string>
    <string name="file_video_play_first">First video already</string>
    <string name="file_video_play_the_next">Next</string>
    <string name="file_video_play_the_one">Last</string>
    <string name="finish">Finish</string>
    <string name="firmware_communication_error">communication error</string>
    <string name="firmware_has_new_version">New firmware version to upgrade</string>
    <string name="firmware_upgrade_success">Your firmware is up to date</string>
    <string name="firmware_upgradeing">Upgrading and needs 2 to 4 minutes. Please wait....</string>
    <string name="fn_flash_light">Flashlight</string>
    <string name="fn_follow_hand">Instant Follow Mode</string>
    <string name="fn_lock_mode">Lock mode</string>
    <string name="fn_lock_mode_support_dialog_tip">This feature is not supported by the current firmware version. Please update the firmware</string>
    <string name="fn_setting">FN Setting</string>
    <string name="focus_sensitivity_adjust">Zoom</string>
    <string name="follow_dead_band_is_what">What is follow mode dead zone?</string>
    <string name="follow_dead_zone_set">Follow mode dead zone Setting</string>
    <string name="follow_mode_set">Follow Mode</string>
    <string name="follow_model">Follow Mode</string>
    <string name="follow_speed">Follow Speed</string>
    <string name="follow_speed_is_what">what is follow mode speed?</string>
    <string name="follow_speed_set">Follow Speed Setting</string>
    <string name="home_fragment_bottom_yuntai">Gimbal</string>
    <string name="label_beauty">Beauty</string>
    <string name="label_beauty_level">Beauty degree</string>
    <string name="label_camera">Camera</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_nature">Nature</string>
    <string name="label_open">Start</string>
    <string name="label_open_panel">Open Panel</string>
    <string name="label_ptz_calibration_description10">1.Device not put on horizontal plane.</string>
    <string name="label_ptz_calibration_description11">2.Device was moved.</string>
    <string name="label_ptz_calibration_description6">Calibration failed. Please take out the device and Mount your phone before tapping Exit Calibration.</string>
    <string name="label_ptz_calibration_description7">Calibration succeeded. Please take up the device and MOUNT your phone before tapping Finish Calibration.</string>
    <string name="label_ptz_calibration_description9">The failure reasons are</string>
    <string name="label_ptz_calibration_over">Finish to calibrate</string>
    <string name="label_sure">Confirm</string>
    <string name="label_white_skinned">Fair</string>
    <string name="video_editing_video_music_classical">Classic</string>
    <string name="video_editing_video_music_hip_hop">Hip-hop</string>
    <string name="video_editing_video_music_in_vogue">Popular</string>
    <string name="video_editing_video_music_knight">Jazz</string>
    <string name="video_editing_video_music_recommend">Recommend</string>
    <string name="video_editing_video_music_rock_and_roll">Rock&amp;Roll</string>
    <string name="video_editing_volume_adjustment">Volume adjustment:</string>
</resources>