<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="46dp">
    <TextView android:textSize="@dimen/text_size15" android:textColor="@color/color_black4" android:gravity="center" android:id="@+id/text" android:layout_width="wrap_content" android:layout_height="45dp" android:layout_marginLeft="15dp" android:text="@string/label_beauty"/>
    <TextView android:textSize="@dimen/text_size14" android:textColor="@color/color_black4" android:gravity="center" android:id="@+id/tv_toggle" android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_width="wrap_content" android:layout_height="45dp" android:text="@string/label_open" android:layout_marginEnd="5dp" android:layout_toStartOf="@+id/tv_open_panel"/>
    <TextView android:textSize="@dimen/text_size14" android:textColor="@color/color_black4" android:gravity="center" android:id="@+id/tv_open_panel" android:paddingLeft="10dp" android:paddingRight="10dp" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="45dp" android:text="@string/label_open_panel" android:layout_marginEnd="5dp" android:layout_alignParentEnd="true"/>
</RelativeLayout>
