<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/top_title" layout="@layout/layout_title"/>
    <RadioGroup android:orientation="horizontal" android:id="@+id/rg_bottom_layout" android:background="@color/color_white" android:layout_width="match_parent" android:layout_height="44dp" android:layout_below="@+id/top_title">
        <RadioButton android:textSize="15dp" android:textColor="@color/color_black1" android:gravity="center" android:layout_gravity="center" android:id="@+id/btn_camera" android:layout_width="0dp" android:layout_height="match_parent" android:layout_marginTop="7dp" android:layout_marginBottom="5dp" android:checked="true" android:button="@null" android:text="@string/label_camera" android:layout_weight="1"/>
        <RadioButton android:textSize="15dp" android:textColor="@color/color_light_gray2" android:gravity="center" android:layout_gravity="center" android:id="@+id/btn_ptz" android:layout_width="0dp" android:layout_height="match_parent" android:layout_marginTop="7dp" android:layout_marginBottom="5dp" android:button="@null" android:text="@string/home_fragment_bottom_yuntai" android:layout_weight="1"/>
        <RadioButton android:textSize="15dp" android:textColor="@color/color_light_gray2" android:gravity="center" android:layout_gravity="center" android:id="@+id/btn_rocker" android:layout_width="0dp" android:layout_height="match_parent" android:layout_marginTop="7dp" android:layout_marginBottom="5dp" android:button="@null" android:text="@string/advanced_setting_for_rocker" android:layout_weight="1"/>
        <RadioButton android:textSize="15dp" android:textColor="@color/color_light_gray2" android:gravity="center" android:layout_gravity="center" android:id="@+id/btn_info" android:layout_width="0dp" android:layout_height="match_parent" android:layout_marginTop="7dp" android:layout_marginBottom="5dp" android:button="@null" android:text="@string/advanced_setting_for_info" android:layout_weight="1"/>
    </RadioGroup>
    <FrameLayout android:id="@+id/fl_main" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/rg_bottom_layout"/>
</RelativeLayout>
