<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="#f5f6f8" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/top_title" layout="@layout/layout_title"/>
    <ImageView android:id="@+id/icon_step" android:layout_width="match_parent" android:layout_height="75dp" android:src="@mipmap/ic_calibration_step4" android:scaleType="centerInside" android:layout_below="@+id/top_title" android:layout_centerVertical="true"/>
    <ImageView android:id="@+id/icon_guide2" android:visibility="invisible" android:layout_width="77dp" android:layout_height="56dp" android:layout_marginLeft="25dp" android:layout_marginTop="40dp" android:layout_marginRight="25dp" android:layout_marginBottom="20dp" android:src="@mipmap/ic_calibration_failed" android:scaleType="centerInside" android:layout_below="@+id/icon_step" android:layout_centerHorizontal="true"/>
    <ImageView android:id="@+id/icon_guide" android:visibility="visible" android:layout_width="77dp" android:layout_height="56dp" android:layout_marginLeft="25dp" android:layout_marginTop="91dp" android:layout_marginRight="25dp" android:layout_marginBottom="40dp" android:src="@mipmap/ic_calibration_success" android:scaleType="centerInside" android:layout_below="@+id/icon_step" android:layout_centerHorizontal="true"/>
    <TextView android:textSize="15dp" android:textColor="@color/color_black55" android:gravity="center" android:id="@+id/tv_description2" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="50dp" android:layout_marginRight="50dp" android:text="@string/label_ptz_calibration_description6" android:layout_below="@+id/icon_guide2"/>
    <TextView android:textSize="15dp" android:textColor="@color/color_black55" android:gravity="center" android:id="@+id/tv_description" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="50dp" android:layout_marginRight="50dp" android:text="@string/label_ptz_calibration_description7" android:layout_below="@+id/icon_guide"/>
    <RelativeLayout android:id="@+id/rl_msg2" android:background="@drawable/sp_stroke5_yellow01" android:paddingTop="20dp" android:paddingBottom="20dp" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="70dp" android:layout_marginTop="30dp" android:layout_marginRight="70dp" android:layout_below="@+id/tv_description2">
        <TextView android:textSize="15dp" android:textColor="@color/color_black55" android:gravity="center" android:id="@+id/tv_msg1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="50dp" android:layout_marginRight="50dp" android:text="@string/label_ptz_calibration_description9"/>
        <TextView android:textSize="15dp" android:textColor="@color/color_black55" android:gravity="left" android:id="@+id/tv_msg2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginRight="20dp" android:text="@string/label_ptz_calibration_description10" android:layout_below="@+id/tv_msg1"/>
        <TextView android:textSize="15dp" android:textColor="@color/color_black55" android:gravity="left" android:id="@+id/tv_msg3" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginRight="20dp" android:text="@string/label_ptz_calibration_description11" android:layout_below="@+id/tv_msg2"/>
    </RelativeLayout>
    <Button android:textSize="18dp" android:textColor="@color/color_white" android:gravity="center" android:id="@+id/btn_next" android:background="@drawable/prepare_jiaozhun" android:paddingLeft="25dp" android:paddingRight="25dp" android:layout_width="wrap_content" android:layout_height="48dp" android:layout_marginBottom="40dp" android:text="@string/label_ptz_calibration_over" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:textAllCaps="false"/>
</RelativeLayout>
