<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:id="@+id/control_default_camera_dialog_content_ll" android:background="@drawable/free_dialog_bg" android:layout_width="325dp" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <TextView android:textSize="14sp" android:textColor="@color/color_black55" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="25dp" android:layout_marginRight="20dp" android:text="@string/control_default_camera_tip_1"/>
        <TextView android:textSize="14sp" android:textColor="@color/color_black55" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="15dp" android:layout_marginRight="20dp" android:text="@string/control_default_camera_tip_2"/>
        <View android:id="@+id/line1" android:background="@color/color_black3" android:layout_width="match_parent" android:layout_height="2px" android:layout_marginTop="20dp" android:layout_above="@+id/ll_upgrade_btn_pre"/>
        <LinearLayout android:orientation="horizontal" android:id="@+id/tn_pre" android:layout_width="match_parent" android:layout_height="50dp">
            <Button android:textSize="16dp" android:textColor="@color/color_light_gray" android:gravity="center" android:id="@+id/control_default_camera_dialog_cancel_btn" android:background="@null" android:visibility="visible" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/control_default_camera_cancel" android:singleLine="true" android:layout_weight="1" android:textAllCaps="false"/>
            <View android:background="@color/color_black3" android:layout_width="2px" android:layout_height="match_parent"/>
            <Button android:textSize="16dp" android:textColor="@color/color_black4" android:gravity="center" android:id="@+id/control_default_camera_dialog_setting_btn" android:background="@null" android:visibility="visible" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/control_default_camera_setting" android:singleLine="true" android:layout_weight="1" android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
