<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/act_video_editing_music_mokuai" android:visibility="gone" android:layout_width="match_parent" android:layout_height="272dp" android:layout_marginLeft="@dimen/text_size15" android:layout_marginTop="@dimen/text_size15" android:layout_marginRight="@dimen/text_size15" android:layout_marginBottom="@dimen/text_size15">
    <RelativeLayout android:background="@drawable/edit_button_top_paint_round_bg5" android:layout_width="match_parent" android:layout_height="222dp">
        <ImageView android:id="@+id/act_edit_video_button_music_dismiss" android:padding="12dp" android:layout_width="40dp" android:layout_height="40dp" android:layout_marginTop="6dp" android:layout_marginRight="6dp" android:src="@mipmap/ic_edit_cha" android:layout_alignParentRight="true"/>
        <TextView android:textSize="20dp" android:textStyle="bold" android:textColor="@color/color_black55" android:id="@+id/act_video_editing_music_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40dp" android:layout_marginTop="23dp" android:text=""/>
        <HorizontalScrollView android:scrollbars="none" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerVertical="true">
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerVertical="true">
                <TextView android:background="@color/transparent" android:layout_width="40dp" android:layout_height="10dp"/>
                <android.support.p003v7.widget.RecyclerView android:id="@+id/act_video_editing_music_check_recycler" android:scrollbars="none" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerVertical="true"/>
            </LinearLayout>
        </HorizontalScrollView>
        <HorizontalScrollView android:scrollbars="none" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="35dp" android:layout_marginBottom="20dp" android:layout_alignParentBottom="true">
            <RadioGroup android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/rg_bgm_types" android:layout_width="match_parent" android:layout_height="wrap_content">
                <RadioButton android:id="@+id/rb_recommend" android:padding="5dp" android:checked="true" android:text="@string/video_editing_video_music_recommend" style="@style/MyEditVideoRadioBtStyle"/>
                <RadioButton android:id="@+id/rb_classic" android:padding="5dp" android:layout_marginLeft="15dp" android:text="@string/video_editing_video_music_classical" style="@style/MyEditVideoRadioBtStyle"/>
                <RadioButton android:id="@+id/rb_jazz" android:padding="5dp" android:layout_marginLeft="15dp" android:text="@string/video_editing_video_music_knight" style="@style/MyEditVideoRadioBtStyle"/>
                <RadioButton android:id="@+id/rb_popular" android:padding="5dp" android:layout_marginLeft="15dp" android:text="@string/video_editing_video_music_in_vogue" style="@style/MyEditVideoRadioBtStyle"/>
                <RadioButton android:id="@+id/rb_hip_hop" android:padding="5dp" android:layout_marginLeft="15dp" android:text="@string/video_editing_video_music_hip_hop" style="@style/MyEditVideoRadioBtStyle"/>
                <RadioButton android:id="@+id/rb_rock" android:padding="5dp" android:layout_marginLeft="15dp" android:text="@string/video_editing_video_music_rock_and_roll" style="@style/MyEditVideoRadioBtStyle"/>
            </RadioGroup>
        </HorizontalScrollView>
        <View android:background="@color/ed" android:visibility="visible" android:layout_width="match_parent" android:layout_height="1dp" android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:background="@drawable/edit_button_buttom_paint_round_bg5" android:layout_width="match_parent" android:layout_height="50dp">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="49dp" android:layout_marginLeft="40dp">
            <TextView android:textSize="@dimen/text_size14" android:textColor="@color/color_black55" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/video_editing_volume_adjustment"/>
            <SeekBar android:id="@+id/edit_video_music_volume_seekbar" android:paddingLeft="1dp" android:paddingRight="1dp" android:layout_width="200dp" android:layout_height="20dp" android:maxHeight="2dp" android:progress="50" android:progressDrawable="@drawable/seekbar_style_black4" android:minHeight="2dp" android:thumb="@mipmap/ic_seekbar_thumb" android:layout_centerHorizontal="true"/>
            <TextView android:textSize="@dimen/text_size13" android:textColor="@color/c5" android:id="@+id/edit_video_music_volume_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="50%"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
